infra/K8S/auction-depl.yml
# NOTE: ConnectionStrings gets the IP of the Postgres Service via "Server=postgres-clusterip" erm
# as same as we have on docker compose
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-svc
spec:
  selector:
    matchLabels:
      app: auction-svc
  template:
    metadata:
      labels:
        app: auction-svc
    spec:
      containers:
        - name: auction-svc
          image: henriquequeirozcunha/auction-svc
          imagePullPolicy: Always # NOTE: Change it to Never if running locally
---
apiVersion: v1
kind: Service
metadata:
  name: auction-clusterip
spec:
  type: ClusterIP
  selector:
    app: auction-svc
  ports:
    - port: 80
      targetPort: 80
      name: web
    - port: 7777
      targetPort: 7777
      name: grpc
