infra/K8S/gateway-deply.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-svc
spec:
  selector:
    matchLabels:
      app: gateway-svc
  template:
    metadata:
      labels:
        app: gateway-svc
    spec:
      containers:
        - name: gateway-svc
          image: henriquequeirozcunha/gateway-svc
          imagePullPolicy: Always # NOTE: Change it to Never if running locally
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-clusterip
spec:
  type: ClusterIP
  selector:
    app: gateway-svc
  ports:
    - port: 80
      targetPort: 80
