infra/K8S/mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /var/data/mongo
              name: mongodata
      volumes:
        - name: mongodata
          persistentVolumeClaim:
            claimName: mongo-claim
---
# Create a ClusterIP service in order to other pods see this service
# Same as put the name of the service on DockerComponse such as http://auction-svc
# action-svc is the "ClusterIP"
apiVersion: v1
kind: Service
metadata:
  name: mongo-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-lb
spec:
  type: LoadBalancer
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
