infra/K8S/webapp-deply.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: henriquequeirozcunha/web-app
          imagePullPolicy: Always # NOTE: Change it to Never if running locally
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-clusterip
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - port: 3000
      targetPort: 3000
